# razermacos-rs

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md  build.rs
examples/: battery.rs  list.rs
librazermacos-sys/: Cargo.toml  build.rs  lib.rs  wrapper.h
src/: devices.rs  lib.rs  main.rs
src/devices/: basilisk_v3_pro_wired.json  basilisk_v3_pro_wireless.json  deathadder_v2_pro_wireless.json  lancehead_wireless.json  mamba_2012_wireless.json  mamba_wireless.json  mouse_charging_dock.json  mouse_dock_pro.json  naga_pro_wireless.json  viper_ultimate_wireless.json
