[package]
authors = ["Felipe Coury <felipe.coury@gmail.com>"]
build = "build.rs"
categories = ["api-bindings"]
description = """
Bindings to librazermacos for allowing interaction with Razer peripherals
on macOS.
"""
edition = "2021"
homepage = "https://github.com/fcoury/razermacos-rs"
keywords = ["razer", "mac", "macos"]
license-file = "LICENSE"
name = "razermacos"
readme = "README.md"
repository = "https://github.com/fcoury/razermacos-rs"
version = "0.1.1"

[dependencies]
lazy_static = "1.4"
librazermacos-sys = {path = "librazermacos-sys", version = "0.1.0"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[build-dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
